[project]
name = "dato-tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
packages = ["item_estimation"]
dependencies = [
    "gitpython>=3.1.46",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "rich>=14.3.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
